# Cursor_custodian_android

./: README.md
app/: build.gradle
app/jni/src/: Android.mk  Game.cpp
app/src/main/: Android.mk  AndroidManifest.xml  Application.mk  CMakeLists.txt
app/src/main/include/: entity.h  ground.h  groundtile.h  player.h  renderwindow.h
app/src/main/java/com/example/ndk/: MainActivity.java  MyActivity.java
app/src/main/res/font/: font.xml
app/src/main/res/layout/: activity_main.xml  activity_my_game.xml  activity_sdlactivity.xml
app/src/main/src/: CMakeLists.txt  Game.cpp  Game.h  entity.cpp  ground.cpp  main.cpp  native-lib.cpp  player.cpp  renderwindow.cpp
gradle/wrapper/: gradle-wrapper.properties
